0x03-shell_variables_expansions/8-true_knowledge

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1214,17 +1214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 987b10d] 7-everybody\n",
-      " 3 files changed, 46 insertions(+), 47 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/7-file\n",
-      " create mode 100644 \"\\\\*\\\\\\\\'\\\"Best School\\\"\\\\'\\\\\\\\*$\\\\?\\\\*\\\\*\\\\*\\\\*\\\\*:)\"\n"
+      "[main 92dad2a] 0x03-shell_variables_expansions/7-create_global_variable\n",
+      " 2 files changed, 22 insertions(+), 39 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/7-create_global_variable\n"
      ]
     },
     {
@@ -1232,14 +1231,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   34dccbd..987b10d  main -> main\n"
+      "   e8693d9..92dad2a  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"7-everybody\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/7-create_global_variable\"\n",
     "git push"
    ]
   },
@@ -1252,7 +1251,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 8. Save current state of directory </h4>\n",
+    "<h4> 8. Every addition to true knowledge is an addition to human power </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1262,91 +1261,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that writes into the file `ls_cwd_content` the result of the command `ls -la` . If the file `ls_cwd_content` already exists, it should be overwritten. If the file `ls_cwd_content` dose not exist, create it.\n",
+    "##### Write a script that prints the result of the addition of 128 with the value stored in the environment variable TRUEKNOWLEDGE, followed by a new line.\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -la\n",
-    "total 20\n",
-    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
-    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
-    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
-    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
-    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
-    "julien@ubuntu:/tmp/h$ ./8-cwd_state \n",
-    "julien@ubuntu:/tmp/h$ ls -la\n",
-    "total 24\n",
-    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
-    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
-    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
-    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
-    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
-    "-rw-rw-r--  1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
-    "julien@ubuntu:/tmp/h$ cat ls_cwd_content \n",
-    "total 20\n",
-    "drwxrwxr-x  2 julien julien 4096 Sep 20 18:18 .\n",
-    "drwxrwxrwt 13 root   root   4096 Sep 20 18:18 ..\n",
-    "-rwxrw-r--  1 julien julien   36 Sep 20 18:18 8-cwd_state\n",
-    "-rw-rw-r--  1 betty  julien   23 Sep 20 14:25 hello\n",
-    "-rw-rw-r--  1 julien julien  926 Sep 20 17:52 iacta\n",
-    "-rw-rw-r--  1 julien julien    0 Sep 20 18:18 ls_cwd_content\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@production-503e7013:~$ export TRUEKNOWLEDGE=1209\n",
+    "julien@production-503e7013:~$ ./8-true_knowledge | cat -e\n",
+    "1337$\n",
+    "julien@production-503e7013:~$\n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: ` 8-cwd_state`\n"
+    "* Directory: `0x03-shell_vairables_expansions`\n",
+    "* File: ` 8-true_knowledge`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/8-cwd_state\n"
+      "Overwriting 0x03-shell_variables_expansions/8-true_knowledge\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/8-cwd_state\n",
+    "%%file 0x03-shell_variables_expansions/8-true_knowledge\n",
     "#!/bin/bash\n",
-    "ls -la > ls_cwd_content"
+    "echo $((128 + $TRUEKNOWLEDGE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "chmod u+x 0x03-shell_variables_expansions/8-true_knowledge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x00-shell_basics\n",
-      "0x00-shell_basics.ipynb\n",
-      "0x01-shell_permissions\n",
-      "0x01-shell_permissions.ipynb\n",
-      "0x02-shell_redirections\n",
-      "0x02. Shell, InputOutput Redirections and filters.ipynb\n",
-      "README.md\n",
-      "\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)\n",
-      "hello\n",
-      "ls_cwd_content\n",
-      "school.mgc\n",
-      "test.HTML\n"
+      "1337$\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/8-cwd_state\n",
-    "./0x02-shell_redirections/8-cwd_state\n",
-    "ls\n"
+    "export TRUEKNOWLEDGE=1209\n",
+    "./0x03-shell_variables_expansions/8-true_knowledge | cat -e\n"
    ]
   },
   {
