9.Divide and rule

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1327,17 +1327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main cdfe762] 0x02-shell_redirections/8-cwd_state\n",
-      " 3 files changed, 73 insertions(+), 48 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/8-cwd_state\n",
-      " create mode 100644 ls_cwd_content\n"
+      "[main 94de287] 0x03-shell_variables_expansions/8-true_knowledge\n",
+      " 2 files changed, 34 insertions(+), 56 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/8-true_knowledge\n"
      ]
     },
     {
@@ -1345,14 +1344,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   987b10d..cdfe762  main -> main\n"
+      "   92dad2a..94de287  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/8-cwd_state\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/8-true_knowledge\"\n",
     "git push"
    ]
   },
@@ -1365,7 +1364,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 9. Duplicate last line</h4>\n",
+    "<h4> 9. Divide and rule</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1375,82 +1374,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that duplicates the last line of the file iacta\n",
+    "##### Write a script that prints the result of POWER divided by DIVIDE, followed by a new line.\n",
     "\n",
-    "* The file iacta will be in the working directory\n",
+    "* POWER and DIVIDE are environment variables\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ cat iacta \n",
-    "Alea iacta est\n",
-    "\n",
-    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
-    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
-    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
-    "he entered Italy at the head of his army in defiance of the Senate and began\n",
-    "his long civil war against Pompey and the Optimates. The phrase has been\n",
-    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
-    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
-    "sorte está lançada), Dutch (De teerling is geworpen),\n",
-    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
-    "indicate that events have passed a point of no return.\n",
-    "\n",
-    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
-    "julien@ubuntu:/tmp/h$ ./9-duplicate_last_line \n",
-    "julien@ubuntu:/tmp/h$ cat iacta \n",
-    "Alea iacta est\n",
-    "\n",
-    "Alea iacta est (\"The die is cast\") is a Latin phrase attributed by Suetonius\n",
-    "(as iacta alea est) to Julius Caesar on January 10, 49 BC\n",
-    "as he led his army across the Rubicon river in Northern Italy. With this step,\n",
-    "he entered Italy at the head of his army in defiance of the Senate and began\n",
-    "his long civil war against Pompey and the Optimates. The phrase has been\n",
-    "adopted in Italian (Il dado è tratto), Romanian (Zarurile au fost aruncate),\n",
-    "Spanish (La suerte está echada), French (Les dés sont jetés), Portuguese (A\n",
-    "sorte está lançada), Dutch (De teerling is geworpen),\n",
-    "German (Der Würfel ist gefallen), Hungarian (A kocka el van vetve) and many other languages to\n",
-    "indicate that events have passed a point of no return.\n",
-    "\n",
-    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
-    "Read more: https://en.wikipedia.org/wiki/Alea_iacta_est\n",
-    "julien@ubuntu:/tmp/h$ \n",
+    "julien@production-503e7013:~$ export POWER=42784\n",
+    "julien@production-503e7013:~$ export DIVIDE=32\n",
+    "julien@production-503e7013:~$ ./9-divide_and_rule | cat -e\n",
+    "1337$\n",
+    "julien@production-503e7013:~$\n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `9-duplicate_last_line`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `9-divide_and_rule`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/9-duplicate_last_line\n"
+      "Writing 0x03-shell_variables_expansions/9-divide_and_rule\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/9-duplicate_last_line\n",
+    "%%file 0x03-shell_variables_expansions/9-divide_and_rule\n",
     "#!/bin/bash\n",
-    "tail -n 1 iacta >> iacta"
+    "echo $(($POWER / $DIVIDE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1337$\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/9-duplicate_last_line\n",
-    "./0x02-shell_redirections/9-duplicate_last_line\n"
+    "chmod u+x 0x03-shell_variables_expansions/9-divide_and_rule\n",
+    "export POWER=42784\n",
+    "export DIVIDE=32\n",
+    "\n",
+    "./0x03-shell_variables_expansions/9-divide_and_rule | cat -e\n"
    ]
   },
   {
@@ -1479,7 +1461,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"9-John Doe\"\n",
+    "git commit -m \"9.Divide and rule\"\n",
     "git push"
    ]
   },
