0x03-shell_variables_expansions/10-love_exponent_breath

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1437,16 +1437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main e8a0ede] 9-John Doe\n",
-      " 2 files changed, 8 insertions(+), 16 deletions(-)\n",
-      " mode change 100644 => 100755 0x01-shell_permissions/9-John_Doe\n"
+      "[main b33127e] 9.Divide and rule\n",
+      " 2 files changed, 38 insertions(+), 54 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/9-divide_and_rule\n"
      ]
     },
     {
@@ -1454,7 +1454,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   1cf6806..e8a0ede  main -> main\n"
+      "   94de287..b33127e  main -> main\n"
      ]
     }
    ],
@@ -1474,7 +1474,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 10.No more javascript</h4>\n",
+    "<h4> 10. Love is anterior to life, posterior to death, initial of creation, and the exponent of breath</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1484,108 +1484,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that deletes all the regular files (not the directories) with a `.js` extension that are present in the current directory and all its subfolders.\n",
+    "##### Write a script that displays the result of BREATH to the power LOVE\n",
+    "* `BREATH` and `LOVE` are environment variables\n",
+    "* The script should display the result, followed by a new line\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/h$ ls -lR\n",
-    ".:\n",
-    "total 24\n",
-    "-rwxrw-r-- 1 julien julien   49 Sep 20 18:29 10-no_more_js\n",
-    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:23 dir1\n",
-    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:24 dir.js\n",
-    "-rw-rw-r-- 1 betty  julien   23 Sep 20 14:25 hello\n",
-    "-rw-rw-r-- 1 julien julien  982 Sep 20 18:21 iacta\n",
-    "-rw-rw-r-- 1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
-    "-rw-rw-r-- 1 julien julien    0 Sep 20 18:23 main.js\n",
-    "\n",
-    "./dir1:\n",
-    "total 0\n",
-    "-rw-rw-r-- 1 julien julien 0 Sep 20 18:23 code.js\n",
-    "\n",
-    "./dir.js:\n",
-    "total 0\n",
-    "julien@ubuntu:/tmp/h$ ./10-no_more_js \n",
-    "julien@ubuntu:/tmp/h$ ls -lR\n",
-    ".:\n",
-    "total 24\n",
-    "-rwxrw-r-- 1 julien julien   49 Sep 20 18:29 10-no_more_js\n",
-    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:29 dir1\n",
-    "drwxrwxr-x 2 julien julien 4096 Sep 20 18:24 dir.js\n",
-    "-rw-rw-r-- 1 betty  julien   23 Sep 20 14:25 hello\n",
-    "-rw-rw-r-- 1 julien julien  982 Sep 20 18:21 iacta\n",
-    "-rw-rw-r-- 1 julien julien  329 Sep 20 18:18 ls_cwd_content\n",
-    "\n",
-    "./dir1:\n",
-    "total 0\n",
-    "\n",
-    "./dir.js:\n",
-    "total 0\n",
-    "julien@ubuntu:/tmp/h$  \n",
+    "julien@production-503e7013:~/$ export BREATH=4\n",
+    "julien@production-503e7013:~/$ export LOVE=3\n",
+    "julien@production-503e7013:~/$ ./10-love_exponent_breath\n",
+    "64\n",
+    "julien@production-503e7013:~/$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `10-no_more_js`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```bash\n",
-    "find [starting_directory] [options] [actions]\n",
-    "```"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `10-love_exponent_breath`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/10-no_more_js\n"
+      "Writing 0x03-shell_variables_expansions/10-love_exponent_breath\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/10-no_more_js\n",
+    "%%file 0x03-shell_variables_expansions/10-love_exponent_breath\n",
     "#!/bin/bash\n",
-    "find . ! -name \"*.js\" -type f -delete \n",
-    "#this is the wrong one becuase it deletes all the files but the .js files"
+    "echo $((BREATH ** LOVE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/10-no_more_js\n"
+      "64\n"
      ]
     }
    ],
-   "source": [
-    "%%file 0x02-shell_redirections/10-no_more_js\n",
-    "#!/bin/bash\n",
-    "find . -type f -name \"*.js\" -delete"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/10-no_more_js\n"
+    "chmod u+x 0x03-shell_variables_expansions/10-love_exponent_breath\n",
+    "export BREATH=4\n",
+    "export LOVE=3\n",
+    "./0x03-shell_variables_expansions/10-love_exponent_breath\n"
    ]
   },
   {
@@ -1613,7 +1568,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/10-no_more_js\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/10-love_exponent_breath\"\n",
     "git push"
    ]
   },
