--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1545,15 +1545,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 8c82d61] 0x02-shell_redirections/10-no_more_js\n",
-      " 2 files changed, 26 insertions(+), 6 deletions(-)\n"
+      "[main c6e2a83] 0x03-shell_variables_expansions/10-love_exponent_breath\n",
+      " 2 files changed, 29 insertions(+), 72 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/10-love_exponent_breath\n"
      ]
     },
     {
@@ -1561,7 +1562,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b28a4b1..8c82d61  main -> main\n"
+      "   b33127e..c6e2a83  main -> main\n"
      ]
     }
    ],
@@ -1581,7 +1582,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 11.Don't just count your directories, make your directories count</h4>\n",
+    "<h4> 11. There are 10 types of people in the world -- Those who understand binary, and those who don't</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1591,103 +1592,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Write a script that counts the number of directories and sub-directories in the current directory. \n",
-    "* The current and parent directories should not be taken into account.\n",
-    "* Hidden directories should be counted.\n",
+    "##### Write a script that converts a number from base 2 to base 10.\n",
+    "\n",
+    "* The number in base 2 is stored in the environment variable BINARY\n",
+    "* The script should display the number in base 10, followed by a new line\n",
     "```bash\n",
-    "julien@production-503e7013:~/shell/fun_with_the_shell$ ls -lRa\n",
-    ".:\n",
-    "total 32\n",
-    "drwxrwxr-x 3 julien julien 4096 Jan 20 03:53 .\n",
-    "drwxrwxr-x 3 julien julien 4096 Jan 20 02:58 ..\n",
-    "-rwxr--r-- 1 julien julien 43 Jan 20 02:59 0-commas\n",
-    "-rwxr--r-- 1 julien julien 47 Jan 20 02:50 1-empty_casks\n",
-    "-rwxrw-r-- 1 julien julien 68 Jan 20 03:35 2-gifs\n",
-    "-rwxrw-r-- 1 julien julien 47 Jan 20 03:53 3-directories\n",
-    "-rw-rw-r-- 1 julien julien 14 Jan 20 03:35 Makefile\n",
-    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 test_dir\n",
-    "\n",
-    "./test_dir:\n",
-    "total 16\n",
-    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 .\n",
-    "drwxrwxr-x 3 julien julien 4096 Jan 20 03:53 ..\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:40 .horrible_selfie.gif\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 README.md\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:17 docker.gif\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:17 file.sh\n",
-    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 photos\n",
-    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 rep.gif\n",
-    "\n",
-    "./test_dir/photos:\n",
-    "total 8\n",
-    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
-    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 cat.gif\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:22 index.html\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 main.gif\n",
-    "-rw-rw-r-- 1 julien julien 0 Jan 20 03:23 rudy_rigot.gif\n",
-    "\n",
-    "./test_dir/rep.gif:\n",
-    "total 8\n",
-    "drwxrwxr-x 2 julien julien 4096 Jan 20 03:23 .\n",
-    "drwxrwxr-x 4 julien julien 4096 Jan 20 03:42 ..\n",
-    "julien@production-503e7013:~/shell/fun_with_the_shell$ ./11-directories\n",
-    "3\n",
-    "julien@production-503e7013:~/shell/fun_with_the_shell$\n",
+    "julien@production-503e7013:~/$ export BINARY=10100111001\n",
+    "julien@production-503e7013:~/$ ./11-binary_to_decimal\n",
+    "1337\n",
+    "julien@production-503e7013:~/$\n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `11-directories`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `11-binary_to_decimal`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/11-directories\n"
+      "Overwriting 0x03-shell_variables_expansions/11-binary_to_decimal\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/11-directories\n",
+    "%%file 0x03-shell_variables_expansions/11-binary_to_decimal\n",
     "#!/bin/bash\n",
-    "find . -mindepth 1 -type d | wc -l"
+    "echo $((2#$BINARY))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x  0x02-shell_redirections/11-directories\n",
+    "chmod u+x  0x03-shell_variables_expansions/11-binary_to_decimal\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30\n"
+      "1337\n"
      ]
     }
    ],
    "source": [
-    "!./0x02-shell_redirections/11-directories"
+    "%%bash\n",
+    "export BINARY=10100111001\n",
+    "./0x03-shell_variables_expansions/11-binary_to_decimal"
    ]
   },
   {
