0x02-shell_redirections/12-newest_files

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1662,16 +1662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 73088ef] 0x02-shell_redirections/11-directories\n",
-      " 2 files changed, 75 insertions(+), 24 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/11-directories\n"
+      "[main d3531ff] 0x03-shell_variables_expansions/11-binary_to_decimal\n",
+      " 2 files changed, 30 insertions(+), 58 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/11-binary_to_decimal\n"
      ]
     },
     {
@@ -1679,14 +1679,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   8c82d61..73088ef  main -> main\n"
+      "   c6e2a83..d3531ff  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/11-directories\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/11-binary_to_decimal\"\n",
     "git push"
    ]
   },
@@ -1699,7 +1699,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 12.What's new</h4>\n",
+    "<h4> 12.Combination</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1709,94 +1709,155 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that displays the 10 newest files in the current directory.\n",
-    "Requirements:\n",
-    "* One file per line\n",
-    "* Sorted from the newest to the oldest\n",
+    "##### Create a script that prints all possible combinations of two letters, except `oo`.\n",
+    "\n",
+    "* Letters are lower cases, from `a` to `z`\n",
+    "* One combination per line\n",
+    "* The output should be alpha ordered, starting with `aa`\n",
+    "* Do not print `oo`\n",
+    "* Your script file should contain maximum 64 characters\n",
     "\n",
     "\n",
     "```bash\n",
-    "alex@ubuntu:/tmp$ ls -l\n",
-    "total 7\n",
-    "-rwxr-xr-x 1 501 dialout  32 Sep 27 23:51 0-hello_world\n",
-    "-rwxr-xr-x 1 501 dialout  46 Sep 28 11:09 10-no_more_js\n",
-    "-rwxr-xr-x 1 501 dialout  43 Sep 28 11:19 11-directories\n",
-    "-rwxr-xr-x 1 501 dialout  30 Sep 29 13:43 12-newest_files\n",
-    "-rwxr-xr-x 1 501 dialout  28 Sep 27 23:54 1-confused_smiley\n",
-    "-rwxr-xr-x 1 501 dialout  28 Sep 27 23:58 2-hellofile\n",
-    "-rwxr-xr-x 1 501 dialout  39 Sep 27 23:58 3-twofiles\n",
-    "-rwxr-xr-x 1 501 dialout  33 Sep 27 23:59 4-lastlines\n",
-    "-rwxr-xr-x 1 501 dialout  33 Sep 28 00:00 5-firstlines\n",
-    "-rwxr-xr-x 1 501 dialout  28 Sep 28 00:25 6-third_line\n",
-    "-rwxr-xr-x 1 501 dialout 110 Sep 28 00:34 7-file\n",
-    "-rwxr-xr-x 1 501 dialout  36 Sep 28 00:34 8-cwd_state\n",
-    "-rwxr-xr-x 1 501 dialout  35 Sep 28 00:35 9-duplicate_last_line\n",
-    "-rw-r--r-- 1 501 dialout  19 Sep 27 23:51 README.md\n",
-    "alex@ubuntu:/tmp$ ./12-newest_files \n",
-    "12-newest_files\n",
-    "11-directories\n",
-    "10-no_more_js\n",
-    "9-duplicate_last_line\n",
-    "7-file\n",
-    "8-cwd_state\n",
-    "6-third_line\n",
-    "5-firstlines\n",
-    "4-lastlines\n",
-    "3-twofiles\n",
-    "alex@ubuntu:/tmp$ \n",
+    "julien@ubuntu:/tmp/0x03$ echo $((26 ** 2 -1))\n",
+    "675\n",
+    "julien@ubuntu:/tmp/0x03$ ./12-combinations | wc -l\n",
+    "675\n",
+    "julien@ubuntu:/tmp/0x03$ \n",
+    "julien@ubuntu:/tmp/0x03$ ./12-combinations | tail -303 | head -10\n",
+    "oi\n",
+    "oj\n",
+    "ok\n",
+    "ol\n",
+    "om\n",
+    "on\n",
+    "op\n",
+    "oq\n",
+    "or\n",
+    "os\n",
+    "julien@ubuntu:/tmp/0x03$\n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `12-newest_files`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `12-combinations`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/12-newest_files\n"
+      "Writing 0x03-shell_variables_expansions/12-combinations\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/12-newest_files\n",
+    "%%file 0x03-shell_variables_expansions/12-combinations\n",
     "#!/bin/bash\n",
-    "ls -t |head -n 10"
+    "echo {a..z}{a..z} | tr ' ' '\\n' | grep -v 'oo'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!echo {a..z}{a..z} | tr ' ' '\\n' | grep -v 'oo'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x02. Shell, InputOutput Redirections and filters.ipynb\n",
-      "0x02-shell_redirections\n",
-      "0x00-shell_basics\n",
-      "0x01-shell_permissions\n",
-      "0x01-shell_permissions.ipynb\n",
-      "README.md\n",
-      "\\*\\\\'\"Best School\"\\'\\\\*$\\?\\*\\*\\*\\*\\*:)\n",
-      "hello\n",
-      "iacta\n",
-      "ls_cwd_content\n"
+      "675\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "675\n",
+      "oi\n",
+      "oj\n",
+      "ok\n",
+      "ol\n",
+      "om\n",
+      "on\n",
+      "op\n",
+      "oq\n",
+      "or\n",
+      "os\n"
      ]
     }
    ],
    "source": [
-    "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/12-newest_files\n",
-    "source ./0x02-shell_redirections/12-newest_files"
+    "\n",
+    "! chmod u+x 0x03-shell_variables_expansions/12-combinations\n",
+    "\n",
+    "! echo $((26 ** 2 -1))\n",
+    "\n",
+    "!./0x03-shell_variables_expansions/12-combinations | wc -l\n",
+    "\n",
+    "!./0x03-shell_variables_expansions/12-combinations | tail -303 | head -10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "676\n",
+      "oo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python script to generate a list of two-letter combinations, excluding 'oo'\n",
+    "\n",
+    "combinations = [chr(first) + chr(second) for first in range(ord('a'), ord('z') + 1)\n",
+    "                for second in range(ord('a'), ord('z') + 1) #if chr(first) + chr(second) != 'oo'\n",
+    "                ]\n",
+    "\n",
+    "# Print the length of the list\n",
+    "print(len(combinations))\n",
+    "print(combinations[int(14*26+14)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "combinations_ =  [chr(combi) for combi in range(ord('a'),ord('z')+1)]\n",
+    "print(len(combinations_))\n",
+    "print(combinations_[14])"
    ]
   },
   {
