0x02-shell_redirections/13-unique3

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1862,16 +1862,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 7d5007d] 0x02-shell_redirections/12-newest_files\n",
-      " 2 files changed, 68 insertions(+), 34 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/12-newest_files\n"
+      "[main 3f0a7b7] 0x02-shell_redirections/12-newest_files\n",
+      " 2 files changed, 122 insertions(+), 59 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/12-combinations\n"
      ]
     },
     {
@@ -1879,7 +1879,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   73088ef..7d5007d  main -> main\n"
+      "   d3531ff..3f0a7b7  main -> main\n"
      ]
     }
    ],
@@ -1899,7 +1899,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 13. Being unique is better than being perfect</h4>\n",
+    "<h4> 13. Floats</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1909,142 +1909,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that takes a list of words as input and prints only words that appear exactly once. \n",
+    "##### Write a script that prints a number with two decimal places, followed by a new line.\n",
     "\n",
-    "* Input format: One line, one word\n",
-    "* Output format: One line, one word\n",
-    "* Words should be sorted\n",
+    "The number will be stored in the environment variable `NUM`.\n",
     "\n",
     "```bash\n",
-    "julien@ubuntu:/tmp/0x02$ cat list \n",
-    "C#\n",
-    "C\n",
-    "Javascript\n",
-    "Perl\n",
-    "PHP\n",
-    "PHP\n",
-    "ASP\n",
-    "R\n",
-    "Go\n",
-    "C#\n",
-    "C++\n",
-    "R\n",
-    "Perl\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Python\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Java\n",
-    "Java\n",
-    "Python\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Javascript\n",
-    "ASP\n",
-    "julien@ubuntu:/tmp/0x02$ cat list | ./13-unique \n",
-    "C\n",
-    "C++\n",
-    "Go\n",
-    "julien@ubuntu:/tmp/0x02$ \n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ export NUM=0\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ ./13-print_float\n",
+    "0.00\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ export NUM=98\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ ./13-print_float\n",
+    "98.00\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ export NUM=3.14159265359\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$ ./13-print_float\n",
+    "3.14\n",
+    "ubuntu@ip-172-31-63-244:~/0x03$\n",
     "```\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `13-unique`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `13-print_float`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/13-unique\n"
+      "Writing 0x03-shell_variables_expansions/13-print_float\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/13-unique\n",
+    "%%file 0x03-shell_variables_expansions/13-print_float\n",
     "#!/bin/bash\n",
-    "sort | uniq -u"
+    "printf \"%.2f\\n\" $NUM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x02-shell_redirections/13-unique"
+    "chmod u+x 0x03-shell_variables_expansions/13-print_float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x02-shell_redirections/list\n"
+      "3.14\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/list\n",
-    "C#\n",
-    "C\n",
-    "Javascript\n",
-    "Perl\n",
-    "PHP\n",
-    "PHP\n",
-    "ASP\n",
-    "R\n",
-    "Go\n",
-    "C#\n",
-    "C++\n",
-    "R\n",
-    "Perl\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Python\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Java\n",
-    "Java\n",
-    "Python\n",
-    "Javascript\n",
-    "Javascript\n",
-    "Javascript\n",
-    "ASP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C\n",
-      "C++\n",
-      "Go\n"
-     ]
-    }
-   ],
-   "source": [
-    "!cat 0x02-shell_redirections/list | ./0x02-shell_redirections/13-unique"
+    "! export NUM=3.141592; ./0x03-shell_variables_expansions/13-print_float"
    ]
   },
   {
