0x03-shell_variables_expansions/100-decimal_to_hexadecimal

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1980,15 +1980,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 66b1d64] 0x02-shell_redirections/13-unique3\n",
-      " 1 file changed, 10 insertions(+), 9 deletions(-)\n"
+      "[main 4e1f96b] 0x02-shell_redirections/13-unique3\n",
+      " 2 files changed, 31 insertions(+), 98 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/13-print_float\n"
      ]
     },
     {
@@ -1996,7 +1997,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   7fd7e0d..66b1d64  main -> main\n"
+      "   3f0a7b7..4e1f96b  main -> main\n"
      ]
     }
    ],
@@ -2016,7 +2017,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 14. It must be in that file</h4>\n",
+    "<h4> 14. Decimal to Hexadecimal</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2026,61 +2027,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display lines containing the pattern \"root\" from the file `/etc/passwd`\n",
+    "##### Write a script that converts a number from base 10 to base 16.\n",
+    "\n",
+    "* The number in base 10 is stored in the environment variable `DECIMAL`\n",
+    "* The script should display the number in base 16, followed by a new line\n",
     "\n",
     " \n",
     "```bash\n",
-    "$ ./14-findthatword\n",
-    "root:*:0:0:System Administrator:/var/root:/bin/sh\n",
-    "daemon:*:1:1:System Services:/var/root:/usr/bin/false\n",
-    "_cvmsroot:*:212:212:CVMS Root:/var/empty:/usr/bin/false\n",
-    "$\n",
+    "julien@production-503e7013:~/$ export DECIMAL=16\n",
+    "julien@production-503e7013:~/$ ./100-decimal_to_hexadecimal\n",
+    "10\n",
+    "julien@production-503e7013:~/$ export DECIMAL=1337\n",
+    "julien@production-503e7013:~/$ ./100-decimal_to_hexadecimal | cat -e\n",
+    "539$\n",
+    "julien@production-503e7013:~/$ export DECIMAL=15\n",
+    "julien@production-503e7013:~/$ ./100-decimal_to_hexadecimal | cat -e\n",
+    "f$\n",
+    "julien@production-503e7013:~/$\n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `14-findthatword`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `100-decimal_to_hexadecimal`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/14-findthatword\n"
+      "Writing 0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/14-findthatword\n",
+    "%%file 0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n",
     "#!/bin/bash\n",
-    "grep \"root\" /etc/passwd"
+    "printf \"%x\\n\" $DECIMAL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root:x:0:0:root:/root:/bin/bash\n"
+      "0\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "chmod u+x 0x02-shell_redirections/14-findthatword\n",
-    "source ./0x02-shell_redirections/14-findthatword\n"
+    "chmod u+x 0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n",
+    "source ./0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n"
    ]
   },
   {
@@ -2109,7 +2118,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/14-findthatword\"\n",
+    "git commit -m \"0x03-shell_variables_expansions/100-decimal_to_hexadecimal\"\n",
     "git push"
    ]
   },
