--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -1765,11 +1765,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aa ab ac ad ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az ba bb bc bd be bf bg bh bi bj bk bl bm bn bo bp bq br bs bt bu bv bw bx by bz ca cb cc cd ce cf cg ch ci cj ck cl cm cn co cp cq cr cs ct cu cv cw cx cy cz da db dc dd de df dg dh di dj dk dl dm dn do dp dq dr ds dt du dv dw dx dy dz ea eb ec ed ee ef eg eh ei ej ek el em en eo ep eq er es et eu ev ew ex ey ez fa fb fc fd fe ff fg fh fi fj fk fl fm fn fo fp fq fr fs ft fu fv fw fx fy fz ga gb gc gd ge gf gg gh gi gj gk gl gm gn go gp gq gr gs gt gu gv gw gx gy gz ha hb hc hd he hf hg hh hi hj hk hl hm hn ho hp hq hr hs ht hu hv hw hx hy hz ia ib ic id ie if ig ih ii ij ik il im in io ip iq ir is it iu iv iw ix iy iz ja jb jc jd je jf jg jh ji jj jk jl jm jn jo jp jq jr js jt ju jv jw jx jy jz ka kb kc kd ke kf kg kh ki kj kk kl km kn ko kp kq kr ks kt ku kv kw kx ky kz la lb lc ld le lf lg lh li lj lk ll lm ln lo lp lq lr ls lt lu lv lw lx ly lz ma mb mc md me mf mg mh mi mj mk ml mm mn mo mp mq mr ms mt mu mv mw mx my mz na nb nc nd ne nf ng nh ni nj nk nl nm nn no np nq nr ns nt nu nv nw nx ny nz oa ob oc od oe of og oh oi oj ok ol om on oo op oq or os ot ou ov ow ox oy oz pa pb pc pd pe pf pg ph pi pj pk pl pm pn po pp pq pr ps pt pu pv pw px py pz qa qb qc qd qe qf qg qh qi qj qk ql qm qn qo qp qq qr qs qt qu qv qw qx qy qz ra rb rc rd re rf rg rh ri rj rk rl rm rn ro rp rq rr rs rt ru rv rw rx ry rz sa sb sc sd se sf sg sh si sj sk sl sm sn so sp sq sr ss st su sv sw sx sy sz ta tb tc td te tf tg th ti tj tk tl tm tn to tp tq tr ts tt tu tv tw tx ty tz ua ub uc ud ue uf ug uh ui uj uk ul um un uo up uq ur us ut uu uv uw ux uy uz va vb vc vd ve vf vg vh vi vj vk vl vm vn vo vp vq vr vs vt vu vv vw vx vy vz wa wb wc wd we wf wg wh wi wj wk wl wm wn wo wp wq wr ws wt wu wv ww wx wy wz xa xb xc xd xe xf xg xh xi xj xk xl xm xn xo xp xq xr xs xt xu xv xw xx xy xz ya yb yc yd ye yf yg yh yi yj yk yl ym yn yo yp yq yr ys yt yu yv yw yx yy yz za zb zc zd ze zf zg zh zi zj zk zl zm zn zo zp zq zr zs zt zu zv zw zx zy zz\n"
+     ]
+    }
+   ],
    "source": [
-    "%%capture\n",
+    "\n",
     "!echo {a..z}{a..z} | tr ' ' '\\n' | grep -v 'oo'"
    ]
   },
@@ -1842,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1850,14 +1858,14 @@
      "output_type": "stream",
      "text": [
       "26\n",
-      "o\n"
+      "n\n"
      ]
     }
    ],
    "source": [
     "combinations_ =  [chr(combi) for combi in range(ord('a'),ord('z')+1)]\n",
     "print(len(combinations_))\n",
-    "print(combinations_[14])"
+    "print(combinations_[13])"
    ]
   },
   {
@@ -2094,16 +2102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 33ab5d1] 0x02-shell_redirections/14-findthatword\n",
-      " 2 files changed, 25 insertions(+), 51 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/14-findthatword\n"
+      "[main 6718e52] 0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n",
+      " 2 files changed, 33 insertions(+), 22 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/100-decimal_to_hexadecimal\n"
      ]
     },
     {
@@ -2111,7 +2119,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   66b1d64..33ab5d1  main -> main\n"
+      "   4e1f96b..6718e52  main -> main\n"
      ]
     }
    ],
@@ -2131,7 +2139,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 15. Count that word</h4>\n",
+    "<h4> 15. Everyone is a proponent of strong encryption</h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -2141,39 +2149,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display the number of lines that contain the pattern \"bin\" in the file /etc/passwd.\n",
+    "##### Write a script that encodes and decodes text using the rot13 encryption. Assume ASCII.\n",
     "\n",
     "\n",
     "```bash\n",
-    "$ ./15-countthatword\n",
-    "81\n",
-    "$ \n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$ cat quote\n",
+    "\"Everyone is a proponent of strong encryption.\"\n",
+    "- Dorothy E. Denning\n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$ ./101-rot13 < quote\n",
+    "\"Rirelbar vf n cebcbarag bs fgebat rapelcgvba.\"\n",
+    "- Qbebgul R. Qraavat\n",
+    "julien@production-503e7013:~/shell/fun_with_the_shell$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x02-shell_redirections`\n",
-    "* File: `15-countthatword`"
+    "* Directory: `0x03-shell_variables_expansions`\n",
+    "* File: `101-rot13`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x02-shell_redirections/15-countthatword\n"
+      "Writing 0x03-shell_variables_expansions/101-rot13\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x02-shell_redirections/15-countthatword\n",
+    "%%file 0x03-shell_variables_expansions/101-rot13\n",
     "#!/bin/bash\n",
-    "grep \"bin\" /etc/passwd | wc -l"
+    "tr 'A-Za-z' 'N-AZ-Mn-az-mn-z'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x03-shell_variables_expansions/101-rot13\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x03-shell_variables_expansions/101-rot13\n",
+    "#!/bin/bash\n",
+    "tr 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz' 'NOPQRSTUVWXYZABCDEFGHIJKLMnopqrstuvwxyzabcdefghijklm'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting 0x03-shell_variables_expansions/quote\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x03-shell_variables_expansions/quote\n",
+    "\"Everyone is a proponent of strong encryption.\"\n",
+    "- Dorothy E. Denning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Rirelbar vf n cebcbarag bs fgebat rapelcgvba.\"\n",
+      "- Qbebgul R. Qraavat\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "! chmod u+x  0x03-shell_variables_expansions/101-rot13\n",
+    "! ./0x03-shell_variables_expansions/101-rot13 0< 0x03-shell_variables_expansions/quote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOPQRSTUVWXYZABCDEFGHIJKLM\n"
+     ]
+    }
+   ],
+   "source": [
+    "def rot13(text):\n",
+    "    result = []\n",
+    "    for char in text:\n",
+    "        if 'a' <= char <= 'z':  # Check for lowercase\n",
+    "            offset = ord('a')\n",
+    "            result.append(chr((ord(char) - offset + 13) % 26 + offset))\n",
+    "        elif 'A' <= char <= 'Z':  # Check for uppercase\n",
+    "            offset = ord('A')\n",
+    "            result.append(chr((ord(char) - offset + 13) % 26 + offset))\n",
+    "        else:\n",
+    "            result.append(char)  # Non-alphabetical characters remain unchanged\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "# Example usage:\n",
+    "original_text = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
+    "encoded_text = rot13(original_text)\n",
+    "print(encoded_text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(25%26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "combinations_ =  [chr(combi) for combi in range(ord('a'),ord('z')+1)]\n",
+    "print(len(combinations_))\n",
+    "print(combinations_[13])"
    ]
   },
   {
@@ -2221,7 +2361,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"0x02-shell_redirections/15-countthatword\"\n",
+    "git commit -m \"00x03-shell_variables_expansions/quote\"\n",
     "git push"
    ]
   },
