00x03-shell_variables_expansions/quote

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -2171,14 +2171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x03-shell_variables_expansions/101-rot13\n"
+      "Overwriting 0x03-shell_variables_expansions/101-rot13\n"
      ]
     }
    ],
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2228,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2318,35 +2318,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "chmod u+x  0x02-shell_redirections/15-countthatword\n",
-    "source ./0x02-shell_redirections/15-countthatword"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main fb17851] 0x02-shell_redirections/15-countthatword\n",
-      " 2 files changed, 25 insertions(+), 48 deletions(-)\n",
-      " create mode 100755 0x02-shell_redirections/15-countthatword\n"
+      "[main 2ce6f8b] 00x03-shell_variables_expansions/quote\n",
+      " 3 files changed, 167 insertions(+), 23 deletions(-)\n",
+      " create mode 100755 0x03-shell_variables_expansions/101-rot13\n",
+      " create mode 100644 0x03-shell_variables_expansions/quote\n"
      ]
     },
     {
@@ -2354,7 +2336,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   33ab5d1..fb17851  main -> main\n"
+      "   6718e52..2ce6f8b  main -> main\n"
      ]
     }
    ],
