00x03-shell_variables_expansions/quote

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2228,15 +2228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"Rirelbar vf n cebcbarag bs fgebat rapelcgvba.\"\n",
-      "- Qbebgul R. Qraavat\n"
+      "tr: range-endpoints of 'N-A' are in reverse collating sequence order\n"
      ]
     }
    ],
@@ -2318,17 +2317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2ce6f8b] 00x03-shell_variables_expansions/quote\n",
-      " 3 files changed, 167 insertions(+), 23 deletions(-)\n",
-      " create mode 100755 0x03-shell_variables_expansions/101-rot13\n",
-      " create mode 100644 0x03-shell_variables_expansions/quote\n"
+      "[main ec2df13] 00x03-shell_variables_expansions/quote\n",
+      " 1 file changed, 10 insertions(+), 28 deletions(-)\n"
      ]
     },
     {
@@ -2336,7 +2333,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   6718e52..2ce6f8b  main -> main\n"
+      "   2ce6f8b..ec2df13  main -> main\n"
      ]
     }
    ],
