00x03-shell_variables_expansions/quote

--- a/0x03-shell_variables_expansions.ipynb
+++ b/0x03-shell_variables_expansions.ipynb
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2185,7 +2185,7 @@
    "source": [
     "%%file 0x03-shell_variables_expansions/101-rot13\n",
     "#!/bin/bash\n",
-    "tr 'A-Za-z' 'N-AZ-Mn-az-mn-z'"
+    "tr 'A-Za-z' 'N-ZA-Mn-za-m'"
    ]
   },
   {
@@ -2228,14 +2228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tr: range-endpoints of 'N-A' are in reverse collating sequence order\n"
+      "\"Rirelbar vf n cebcbarag bs fgebat rapelcgvba.\"\n",
+      "- Qbebgul R. Qraavat\n"
      ]
     }
    ],
@@ -2317,15 +2318,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ec2df13] 00x03-shell_variables_expansions/quote\n",
-      " 1 file changed, 10 insertions(+), 28 deletions(-)\n"
+      "[main e4ca2ca] 00x03-shell_variables_expansions/quote\n",
+      " 2 files changed, 8 insertions(+), 11 deletions(-)\n"
      ]
     },
     {
@@ -2333,7 +2334,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   2ce6f8b..ec2df13  main -> main\n"
+      "   ec2df13..e4ca2ca  main -> main\n"
      ]
     }
    ],
